--- a/20220120_BOP_standardized_mortality_count_for_sharing.ipynb
+++ b/20220120_BOP_standardized_mortality_count_for_sharing.ipynb
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract the totals and the insitution codes\n",
+    "# extract the totals and the institution codes\n",
     "def parse_json(path):\n",
     "    f = open(path)\n",
     "    data = json.load(f)\n",
@@ -471,7 +471,7 @@
     }
    ],
    "source": [
-    "# check if any BOP facility hans't had any deaths\n",
+    "# check if any BOP facility hasn't had any deaths\n",
     "[x for x in bopcodes if x not in deathmaster.InstID.unique()]"
    ]
   },
@@ -922,7 +922,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute the interpolated values for Jan 1 and Dec. 31 of each year\n",
+    "# compute the interpolated and extrapolated values for Jan 1 and Dec. 31 of each year\n",
     "bookends = []\n",
     "for year in yearsarray:\n",
     "    res = get_bookends(year)\n",
