--- a/20220120_BOP_standardized_mortality_count_for_sharing.Rmd
+++ b/20220120_BOP_standardized_mortality_count_for_sharing.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, error = FAL
 
 
 # Understanding mortality rates in BOP-operated prisons during 2020-2021 
-NPR obtained a database of people who died in BOP-operated prisons in through Freedom of Information Act requests filed by NPR also requests filed by Professor Alison Guernsey at University of Iowa, shared with NPR. We compared mortality rates during between 2020 and 2021 with previous years, adjusting for age. We found that mortality rates in BOP facilities in 2020 and 2021 have been higher than the five years before the pandemic.
+NPR obtained a database of people who died in BOP-operated prisons through Freedom of Information Act requests filed by NPR, as well as requests filed by Professor Alison Guernsey at University of Iowa, shared with NPR. We compared mortality rates during 2020 and 2021 with previous years, adjusting for age. We found that mortality rates in BOP facilities in 2020 and 2021 have been significantly higher than the five years before the pandemic.
 
 ### Import Libraries
 
@@ -313,11 +313,11 @@ ggplot()+
 
 ### Computing annualized average prison population
 
-Given prison population decreased significantly over the course of 2020 and 2021, we calculate an annualized average population for every year using all accessible datapoints through out the year. We use linear interpolation and extrapolation to fill in the times when there's no data available.
+Given prison population decreased significantly over the course of 2020 and 2021, we calculated an annualized average population for every year using all accessible datapoints throughout the year. We used linear interpolation and extrapolation to fill in the times when there's no data available.
 
 
 #### Interpolate/extrapolate Jan 1 and Dec 31 values
-To calculate and annualized average, we need to make sure that every year has values for the first and last day of the year. This datapoint doesn't exist for every year, so we use interpolation and extrapolation to fill in the blanks
+To calculate an annualized average, we needed to make sure that every year has values for the first and last day of the year. This datapoint doesn't exist for every year, so we used interpolation and extrapolation to fill in the blanks
 
 ```{r}
 interpolate_population = function(df, year_choice, mode){
@@ -677,8 +677,9 @@ df %>%
 
 ### Compare mortality rates during pandemic and five years prior
 #### 2020 to 2015-2019
-Using population and mortality between 2015 and 2019 as reference population.<br>
-We have also considered using US population as a reference population. Similar to previous studies, we found that expected deaths exceed actual deaths when use the US population as a reference. One of the reasons can be that many causes of death in general population, like car accidents, don't exist in incarcerated environments.
+We used population between 2015 and 2019 as reference.
+
+We also considered using US population as a reference population. Similar to previous studies, we found that expected deaths exceed actual deaths when using the US population as a reference. One of the reasons may be that many causes of death in the general population, like car accidents, don't exist in incarcerated environments.
 
 
 ```{r}
